--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,21 @@ buildscript {
         maven {
             url = "https://plugins.gradle.org/m2/"
         }
+        maven {
+            name = 'sponge'
+            url = 'https://repo.spongepowered.org/maven'
+        }
     }
     dependencies {
         classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
         classpath "gradle.plugin.org.spongepowered:spongegradle:0.8.1"
+        classpath 'org.spongepowered:mixingradle:0.5-SNAPSHOT'
     }
 }
 
 apply plugin: "net.minecraftforge.gradle.forge"
 apply plugin: "org.spongepowered.plugin"
+apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'idea'
 
 version = modVersion
@@ -69,12 +75,21 @@ addGradleStart()
 
 repositories {
     mavenCentral()
+
+    maven {
+        name = 'sponge'
+        url = 'https://repo.spongepowered.org/maven'
+    }
 }
 
 dependencies {
     compile 'org.spongepowered:spongeapi:7.0.0'
+    compile 'org.spongepowered:mixin:0.7.4-SNAPSHOT'
     testCompile 'junit:junit:4.12'
-    testCompile 'com.googlecode.junit-toolbox:junit-toolbox:2.4'
+}
+
+mixin {
+    add sourceSets.main, "mctester.main.refmap.json"
 }
 
 processResources {
