--- a/uploader/package.json
+++ b/uploader/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.3",
     "github-api": "^3.0.0",
-    "imgur-uploader": "^4.2.1"
+    "imgur-uploader": "^4.2.1",
+    "multer": "^1.3.0",
+    "raw-body": "^2.3.3"
   }
 }
