--- a/uploader/package.json
+++ b/uploader/package.json
@@ -13,6 +13,7 @@
     "github-api": "^3.0.0",
     "imgur-uploader": "^4.2.1",
     "multer": "^1.3.0",
-    "raw-body": "^2.3.3"
+    "raw-body": "^2.3.3",
+    "request": "^2.85.0"
   }
 }
