Publish mctester-uploader 0.2

--- a/uploader/package.json
+++ b/uploader/package.json
@@ -1,8 +1,11 @@
 {
   "name": "mctester-uploader",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Uploads test artifacts from McTester",
   "main": "index.js",
+  "bin": {
+    "mctesterupload": "./client.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
