Change version to 0.1

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.jfrog.bintray" version "1.7.3"
+}
+
 apply plugin: "net.minecraftforge.gradle.forge"
 apply plugin: "org.spongepowered.plugin"
 //apply plugin: 'org.spongepowered.mixin'
@@ -31,6 +35,21 @@ apply plugin: 'idea'
 apply plugin: "maven"
 apply plugin: 'groovy'
 
+
+bintray {
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_KEY')
+    configurations = ['archives']
+    pkg {
+        repo = 'McTester'
+        name = 'McTester'
+        licenses = ['MIT']
+        vcsUrl = 'https://github.com/Aaron1011/McTester'
+        version {
+            name = '0.1.0'
+        }
+    }
+}
 
 version = modVersion
 group = modGroup
