--- a/uploader/package.json
+++ b/uploader/package.json
@@ -2,7 +2,7 @@
   "name": "mctester-uploader",
   "version": "0.2.0",
   "description": "Uploads test artifacts from McTester",
-  "main": "index.js",
+  "main": "./main/expressServer.js",
   "bin": {
     "mctesterupload": "./client.js"
   },
@@ -17,6 +17,11 @@
     "imgur-uploader": "^4.2.1",
     "multer": "^1.3.0",
     "raw-body": "^2.3.3",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "string-to-stream": "^1.1.1"
+  },
+  "devDependencies": {
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   }
 }
