--- a/uploader/package.json
+++ b/uploader/package.json
@@ -2,16 +2,17 @@
   "name": "mctester-uploader",
   "version": "0.2.0",
   "description": "Uploads test artifacts from McTester",
-  "main": "./main/expressServer.js",
   "bin": {
     "mctesterupload": "./client.js"
   },
   "scripts": {
+    "start": "node $NODE_DEBUG_OPTION main/expressServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "github-api": "^3.0.0",
     "imgur-uploader": "^4.2.1",
