--- a/uploader/package.json
+++ b/uploader/package.json
@@ -23,6 +23,7 @@
     "string-to-stream": "^1.1.1"
   },
   "devDependencies": {
+    "@types/busboy": "^0.2.3",
     "@types/express": "^4.11.1",
     "ts-loader": "^4.3.0",
     "typescript": "^2.8.3",
