--- a/uploader/tsconfig.json
+++ b/uploader/tsconfig.json
@@ -7,8 +7,8 @@
     "sourceMap": true,
     "allowJs": true,
     "lib": ["es5", "es6", "dom"],
-    "strict": false,
-    "strictNullChecks": false
+    "strict": true,
+    "strictNullChecks": true
   },
   "include": [
     "src/**/*"
