--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@ modGroup=org.spongepowered
 modVersion=0.4.0-SNAPSHOT
 modBaseName=mctester
 forgeVersion=1.12.2-14.23.3.2655
-mcpVersion=stable_32
+mcpVersion=snapshot_20171007
