--- a/build.gradle
+++ b/build.gradle
@@ -150,7 +150,7 @@ processResources {
 shadowJar {
     configurations = [project.configurations.shadow]
 
-    relocate "kotlin", "pw.aaron1011.tradesystem.shaded.kotlin"
+    relocate "kotlin", " org.spongepowered.mctester.shaded.kotlin"
 
     classifier = null // Removes '-all' suffix from output file name
 }
