Run './gradlew build --stacktrace' on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
 
+install: true
+script: ./gradlew build --stacktrace
+
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
