Enable gradle INFO logging on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 before_install:
   - scripts/run-xvfb
 install: true
-script: ./gradlew build --stacktrace
+script: ./gradlew build --stacktrace --info
 
 
 before_cache:
