--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
 
 plugins {
     id 'maven'
+    id "org.sonarqube" version "2.6.2"
     id 'org.jetbrains.kotlin.jvm' version '1.2.51'
 }
 
