--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 install: true
 
 script:
-  - DISPLAY=:99 ./gradlew build --stacktrace --info
+  - DISPLAY=:99 ./gradlew build --stacktrace
   - sonar-scanner
 
 before_cache:
