--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ minecraft {
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = project.mcpVersion // Must be the same as SpongeForge
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    replace '@@MCTESTER_VERSION@@', "${project.group}:${project.archivesBaseName}:${project.version}"
 }
 
 def addGradleStart() {
