--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 modGroup=org.spongepowered
-modVersion=0.10.8-SNAPSHOT
+modVersion=0.10.9-SNAPSHOT
 modBaseName=mctester
-forgeVersion=1.12.2-14.23.4.2705
+forgeVersion=2768
 mcpVersion=snapshot_20180808
