--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,13 @@ buildscript {
 }
 
 plugins {
+    id 'com.gradle.build-scan' version '1.16'
     id 'maven'
     id "org.sonarqube" version "2.6.2"
     id 'org.jetbrains.kotlin.jvm' version '1.3.0'
 }
+
+buildScan { licenseAgreementUrl = 'https://gradle.com/terms-of-service'; licenseAgree = 'yes' }
 
 
 apply plugin: 'groovy'
